cmake_minimum_required(VERSION 3.17)
project(codechef_19_01_22)

set(CMAKE_CXX_STANDARD 14)

add_executable(question_E question_E.cpp)
add_executable(question_D question_D.cpp)
add_executable(question_C question_C.cpp)
add_executable(question_B question_B.cpp)
add_executable(codechef_19_01_22 main.cpp)