cmake_minimum_required(VERSION 3.17)
project(HW2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Question_F_gili Question_F_gili.cpp)
add_executable(Question_F Question_F.cpp)
add_executable(Question_E_stolen Question_E_stolen.cpp)
add_executable(Question_E Question_E.cpp)
add_executable(Question_C Question_C.cpp)
add_executable(HW2 Question_C.cpp)